모바일버전 스킬아이콘 수정

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                         <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-bootstrap"></i></li>
                         <li class="list-inline-item"><i class="fa-brands fa-github"></i></li>
-                        <li class="list-inline-item"><div class="adobe-icon">PS</div></li>
-                        <li class="list-inline-item"><div class="adobe-icon">AI</div></li>
+                        <li class="list-inline-item box-adobe"><div class="adobe-icon">PS</div></li>
+                        <li class="list-inline-item box-adobe"><div class="adobe-icon">AI</div></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -147,7 +147,7 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="10000">
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
-                                    <div class="flex-grow-1 portfolio-flex">
+                                    <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">CROWN</h3>
                                         <div class="flex-grow-1">
                                             <div>PC버전 메인페이지와 '고객의 소리' 서브페이지로 구성되어 있습니다.</div>
@@ -172,7 +172,7 @@
 
                             <div class="carousel-item" data-bs-interval="2000">
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
-                                    <div class="flex-grow-1  portfolio-flex">
+                                    <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">iPad</h3>
                                         <div class="flex-grow-1">
                                             <div>반응형 메인페이지로 구성되어있습니다.</div>
@@ -198,7 +198,7 @@
 
                             <div class="carousel-item" data-bs-interval="2000">
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
-                                    <div class="flex-grow-1  portfolio-flex">
+                                    <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">H&M</h3>
                                         <div class="flex-grow-1">
                                             <div>반응형 메인페이지로 구성되어있습니다.</div>
@@ -224,7 +224,7 @@
 
                             <div class="carousel-item" data-bs-interval="2000">
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
-                                    <div class="flex-grow-1  portfolio-flex">
+                                    <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">Spotify</h3>
                                         <div class="flex-grow-1">
                                             <div>PC버전 메인페이지로 구성되어있습니다.</div>
@@ -248,7 +248,7 @@
 
                             <div class="carousel-item" data-bs-interval="2000">
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-2">
-                                    <div class="flex-grow-1  portfolio-flex">
+                                    <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">Google</h3>
                                         <div class="flex-grow-1">
                                             <div>PC버전 메인페이지로 구성되어있습니다.</div>
