포트폴리오 문구 수정

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            프로젝트 업로드와 Branch 생성을 통한 버전관리 가능
+                            프로젝트 업로드와 수정을 통해 버전관리 가능 Branch를 생성하여 협업 가능
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
