깃허브 포트폴리오 사이트 링크 추가

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                         끊임없이 학습하고 성장하는 자세로, 더 나은 결과물을 위해 노력하는 웹 퍼블리셔가 되겠습니다.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fa-solid fa-user"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#!" target="_blank"><i class="fa-solid fa-user"></i></a>
+                        <a class="social-icon" href="https://github.com/beam1028?tab=repositories" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -157,12 +157,12 @@
                                         <p class="mt-3">사용 프로그램 : HTML, CSS, JavaScript, PhotoShop</p>
                                         <div class="subheading">
                                             <div class="site-link">
-                                                <a href="#">PC</a>
+                                                <a href="https://crown-five.vercel.app/" target="_blank">PC</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="flex-shrink-0 portfolio-img">
-                                        <a href="#">
+                                        <a href="https://crown-five.vercel.app/" target="_blank">
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                             <img class="portfolio-img" width="450" src="./images/portfolio-1.jpg" />
                                         </a>
@@ -181,14 +181,14 @@
                                         <p class="mt-3">사용 프로그램 : HTML, CSS, JavaScript</p>
                                         <div class="subheading">
                                             <div class="site-link">
-                                                <a href="#">PC</a>
-                                                <a href="#">TAB</a>
-                                                <a href="#">Mobile</a>
+                                                <a href="https://i-pad-kappa.vercel.app/" target="_blank">PC</a>
+                                                <a href="https://i-pad-kappa.vercel.app/" onclick="window.open(this.href, '_blank', 'width=767, height=1080'); return false;">TAB</a>
+                                                <a href="https://i-pad-kappa.vercel.app/" onclick="window.open(this.href, '_blank', 'width=575, height=1080'); return false;">Mobile</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="flex-shrink-0 portfolio-img">
-                                        <a href="#">
+                                        <a href="https://i-pad-kappa.vercel.app/" target="_blank">
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                             <img class="portfolio-img" width="450" src="./images/portfolio-2.jpg" />
                                         </a>
@@ -207,14 +207,14 @@
                                         <p class="mt-3">사용 프로그램 : HTML, CSS, Bootstrap</p>
                                         <div class="subheading">
                                             <div class="site-link">
-                                                <a href="#">PC</a>
-                                                <a href="#">TAB</a>
-                                                <a href="#">Mobile</a>
+                                                <a href="https://lively-sfogliatella-cbbd8c.netlify.app" target="_blank">PC</a>
+                                                <a href="https://lively-sfogliatella-cbbd8c.netlify.app" onclick="window.open(this.href, '_blank', 'width=767, height=1080'); return false;">TAB</a>
+                                                <a href="https://lively-sfogliatella-cbbd8c.netlify.app" onclick="window.open(this.href, '_blank', 'width=575, height=1080'); return false;">Mobile</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="flex-shrink-0 portfolio-img">
-                                        <a href="#">
+                                        <a href="https://lively-sfogliatella-cbbd8c.netlify.app" target="_blank">
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                             <img class="portfolio-img" width="450" src="./images/portfolio-3.jpg" />
                                         </a>
@@ -233,12 +233,12 @@
                                         <p class="mt-3">사용 프로그램 : HTML, CSS</p>
                                         <div class="subheading">
                                             <div class="site-link">
-                                                <a href="#">PC</a>
+                                                <a href="https://animated-fudge-ce080c.netlify.app" target="_blank">PC</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="flex-shrink-0 portfolio-img">
-                                        <a href="#">
+                                        <a href="https://animated-fudge-ce080c.netlify.app" target="_blank">
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                             <img class="portfolio-img" width="450" src="./images/portfolio-4.jpg" />
                                         </a>
@@ -257,12 +257,12 @@
                                         <p class="mt-3">사용 프로그램 : HTML, CSS</p>
                                         <div class="subheading">
                                             <div class="site-link">
-                                                <a href="#">PC</a>
+                                                <a href="https://chipper-piroshki-5d67c2.netlify.app" target="_blank">PC</a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="flex-shrink-0 portfolio-img">
-                                        <a href="#">
+                                        <a href="https://chipper-piroshki-5d67c2.netlify.app" target="_blank">
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i>
                                             <img class="portfolio-img" width="450" src="./images/portfolio-5.jpg" />
                                         </a>
