포폴글 수정 이력서 추가

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -53,7 +53,7 @@
                         끊임없이 학습하고 성장하는 자세로, 더 나은 결과물을 위해 노력하는 웹 퍼블리셔가 되겠습니다.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!" target="_blank"><i class="fa-solid fa-user"></i></a>
+                        <a class="social-icon" href="입사지원서.pdf" target="_blank"><i class="fa-solid fa-user"></i></a>
                         <a class="social-icon" href="https://github.com/beam1028?tab=repositories" target="_blank"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                                     <div class="flex-grow-1 portfolio-flex-text">
                                         <h3 class="mb-3">CROWN</h3>
                                         <div class="flex-grow-1">
-                                            <div>PC버전 메인페이지와 '고객의 소리' 서브페이지로 구성되어 있습니다.</div>
+                                            <div>PC버전 메인페이지와 '회사소개' 서브페이지로 구성되어 있습니다.</div>
                                             <div>정보가 거의 없는 기존 메인페이지와는 다르게 이벤트, 신제품 등 한 페이지로 확인 가능하도록 리뉴얼 하였습니다.</div>
                                             <div>Swiper, ScrollSpy 등 다양한 플러그인을 활용하여 제작하였습니다.</div>
                                         </div>
@@ -158,6 +158,7 @@
                                         <div class="subheading">
                                             <div class="site-link">
                                                 <a href="https://crown-five.vercel.app/" target="_blank">PC</a>
+                                                <a href="https://crown-five.vercel.app/subpage/index.html" target="_blank">SUBPAGE</a>
                                             </div>
                                         </div>
                                     </div>
